# alter_browser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
alterbrowser/: __init__.py  __main__.py  archetype.py  archetype_library.py  browser.py  errors.py  fonts.py  ip_adapt.py  launcher.py  modes.py  presets.py  profile.py  switches.py  utils.py
docs/: API.md  USAGE.md
tests/: __init__.py  conftest.py  test_archetype_kwarg.py  test_fonts.py  test_presets.py  test_profile.py  test_switches.py  test_v1_features.py
