[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alterbrowser"
version = "1.0.0"
description = "Python launcher & profile manager for stealth Chromium fingerprint spoofing"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "alterbrowser contributors" },
]
keywords = [
    "chromium",
    "fingerprint",
    "browser-automation",
    "profile-management",
    "anti-detect",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
socks = [
    "PySocks>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/alterbrowser/alter_browser"
Issues = "https://github.com/alterbrowser/alter_browser/issues"

[project.scripts]
alterbrowser = "alterbrowser.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alterbrowser*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
alterbrowser = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
